# rust_barcode

./: Cargo.toml
src/: lib.rs
src/barcode/: code39.rs  industrial2of5.rs  mod.rs  postnet.rs
