[package]
name = "barcode_command"
version = "0.1.0"
authors = ["support@barcoderesource.com"]
edition = "2018"

description = "Create compliant barcodes using fonts."
documentation = "https://www.barcoderesource.com/rustbarcode.shtml"
homepage = "https://www.barcoderesource.com/rustbarcode.shtml"
repository = "https://github.com/Misfits-Rebels-Outcasts/rustbarcode"
keywords = ["barcode", "barcode fonts", "code39", "indsutrial2of5", "postnet"]
categories = ["command-line-utilities"]
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
