[package]
name = "barcode_command"
version = "0.1.1"
authors = ["support@barcoderesource.com"]
edition = "2018"

description = "Create auto-id industry compliant barcodes using fonts. This command line utility supports generation of Code 39 (ConnectCode39.ttf), Industrial 2 of 5 (ConnectCodeIND2of5.ttf) and POSTNET (ConnectCodePostnet.ttf) barcodes. The fonts can be downloaded free from the home page of this crate."
documentation = "https://www.barcoderesource.com/rust_barcode.shtml"
homepage = "https://www.barcoderesource.com/rust_barcode.shtml"
repository = "https://github.com/BarcodeResource/rust_barcode"
keywords = ["barcode", "code39", "indsutrial2of5", "postnet"]
categories = ["command-line-utilities"]
license = "GPL-3.0"

